// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner [common] example testing should match snapshot(s) for small 1`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-has-close lucid-Banner-small"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Default
    </span>
    <CloseIcon
      className="lucid-Banner-close"
      isClickable={true}
      onClick={[Function]}
      size={8}
    />
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for small 2`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-small"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Default -- No Close 
      ×
    </span>
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for small 3`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-has-close lucid-Banner-success lucid-Banner-small"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Success
    </span>
    <CloseIcon
      className="lucid-Banner-close"
      isClickable={true}
      onClick={[Function]}
      size={8}
    />
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for small 4`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-success lucid-Banner-small"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Success -- No Close 
      ×
    </span>
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for small 5`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-has-close lucid-Banner-warning lucid-Banner-small"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Warning
    </span>
    <CloseIcon
      className="lucid-Banner-close"
      isClickable={true}
      onClick={[Function]}
      size={8}
    />
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for small 6`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-warning lucid-Banner-small"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Warning -- No Close 
      ×
    </span>
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for small 7`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-has-close lucid-Banner-danger lucid-Banner-small"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Danger
    </span>
    <CloseIcon
      className="lucid-Banner-close"
      isClickable={true}
      onClick={[Function]}
      size={8}
    />
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for small 8`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-danger lucid-Banner-small"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Danger -- No Close 
      ×
    </span>
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for small 9`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-has-close lucid-Banner-info lucid-Banner-small"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Info
    </span>
    <CloseIcon
      className="lucid-Banner-close"
      isClickable={true}
      onClick={[Function]}
      size={8}
    />
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for small 10`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-info lucid-Banner-small"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Info -- No Close 
      ×
    </span>
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for small 11`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-has-icon lucid-Banner-has-close lucid-Banner-danger lucid-Banner-small"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-icon"
    >
      <Component />
    </span>
    <span
      className="lucid-Banner-content"
    >
      Has Custom Icon
    </span>
    <CloseIcon
      className="lucid-Banner-close"
      isClickable={true}
      onClick={[Function]}
      size={8}
    />
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for stateful 1`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-has-close"
  >
    <span
      className="lucid-Banner-content"
    >
      Default
    </span>
    <CloseIcon
      className="lucid-Banner-close"
      isClickable={true}
      onClick={[Function]}
      size={8}
    />
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for stateless 1`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-has-close"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      <div>
        Sit totam voluptas error dolorum ullam Quo ipsam esse amet mollitia consequuntur Cumque cum nisi porro cumque sit nisi Facilis placeat suscipit earum blanditiis eveniet Earum dolor voluptates perferendis quis
      </div>
      <div>
        Adipisicing culpa atque totam quidem dicta consequatur fugiat quaerat Facilis cupiditate amet nam in perferendis Veritatis iusto molestiae illum doloribus deserunt Odit autem obcaecati dolores ad incidunt? Ipsa eveniet modi.
      </div>
      <div>
        Consectetur eos maiores veniam maiores incidunt dolores Quas magni velit ullam necessitatibus atque. Animi harum aliquam totam quod unde Deserunt molestiae consequatur suscipit debitis sed? At sit nostrum ratione deserunt?
      </div>
      <div>
        Lorem sit explicabo vitae illum labore Nostrum inventore dolor nisi deserunt voluptatem Voluptas itaque nesciunt omnis necessitatibus asperiores! Eius error ab consequatur necessitatibus repudiandae quibusdam Odio consequuntur at necessitatibus at
      </div>
      <div>
        Dolor nihil delectus numquam laudantium nisi Minus accusantium hic consequatur accusantium assumenda illum quod! Praesentium qui vel nemo ea reiciendis. Accusantium officiis molestiae delectus nesciunt aperiam Fugit ipsam esse accusamus.
      </div>
      <div>
        <a
          href="#"
        >
          Click Me
        </a>
      </div>
    </span>
    <CloseIcon
      className="lucid-Banner-close"
      isClickable={true}
      onClick={[Function]}
      size={8}
    />
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for stateless 2`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Default -- No Close 
      ×
    </span>
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for stateless 3`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-has-close lucid-Banner-success"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Success
    </span>
    <CloseIcon
      className="lucid-Banner-close"
      isClickable={true}
      onClick={[Function]}
      size={8}
    />
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for stateless 4`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-success"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Success -- No Close 
      ×
    </span>
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for stateless 5`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-has-close lucid-Banner-warning"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Warning 
      <a
        href="#"
      >
        Don't Click Here
      </a>
    </span>
    <CloseIcon
      className="lucid-Banner-close"
      isClickable={true}
      onClick={[Function]}
      size={8}
    />
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for stateless 6`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-warning"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Warning -- No Close 
      ×
    </span>
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for stateless 7`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-has-close lucid-Banner-danger"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Danger
    </span>
    <CloseIcon
      className="lucid-Banner-close"
      isClickable={true}
      onClick={[Function]}
      size={8}
    />
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for stateless 8`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-danger"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Danger -- No Close 
      ×
    </span>
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for stateless 9`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-has-close lucid-Banner-info"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Info
    </span>
    <CloseIcon
      className="lucid-Banner-close"
      isClickable={true}
      onClick={[Function]}
      size={8}
    />
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for stateless 10`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-info"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-content"
    >
      Info -- No Close 
      ×
    </span>
  </section>
</CSSTransitionGroup>
`;

exports[`Banner [common] example testing should match snapshot(s) for stateless 11`] = `
<CSSTransitionGroup
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={300}
  transitionLeave={true}
  transitionLeaveTimeout={300}
  transitionName="lucid-Banner"
>
  <section
    className="lucid-Banner lucid-Banner-has-icon lucid-Banner-has-close lucid-Banner-danger"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <span
      className="lucid-Banner-icon"
    >
      <ChatIcon />
    </span>
    <span
      className="lucid-Banner-content"
    >
      Has Icon
    </span>
    <CloseIcon
      className="lucid-Banner-close"
      isClickable={true}
      onClick={[Function]}
      size={8}
    />
  </section>
</CSSTransitionGroup>
`;
